desktop spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -621,7 +621,7 @@ textarea {
    }
 
    .amenities .amenity {
-    width: 70%;
+    width: 78%;
    }
    
   /* Testimonials Area */
@@ -656,7 +656,7 @@ textarea {
 /*Desktop styles here*/
 
   /* Header */
-  header {
+   header {
     padding: 0 0 750px 0;
    }
 
@@ -718,7 +718,7 @@ textarea {
    }
 
    .amenities .amenity {
-    width: 50%;
+    width: 75%;
    }
 
    .amenities .amenity p {
